# Prism

./: .gitignore  README.md  pyproject.toml
gui/: README.md  package-lock.json  package.json
gui/src/: index.html  main.js  preload.js  prism-runner.js  renderer.js  styles.css
src/prism/: cli.py  config.py  llm.py  ui.py
src/prism/commands/: env.py  explain.py  scan.py  setup.py
src/prism/core/: detect.py  references.py  symbols.py  tools.py
