[project]
name = "prism-cli"
version = "0.2.1"
description = "A local AI-powered project intelligence layer for developers."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "tomli-w>=1.0",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
    "questionary>=2.0",
]

[project.scripts]
prism = "prism.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]
